tests/vendor/valid/function_calls/no_arguments/forward_decl.c
//expect 3
//tags: functions
int foo(void);

int main(void) {
    return foo();
}

int foo(void) {
    return 3;
}