tests/vendor/invalid/syntax/invalid_identifier_2.c
//tags: trivial
int main(void)
{
    return @b;
}